feat: micro go cli
